--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.5"
+bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "render", "png"] }
 bevy_tilemap = "0.4"
 enum_index = "0.2.0"
 enum_index_derive = "0.2.0"
