--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,6 @@ enum_index_derive = "0.2.0"
 bevy_egui = "0.4"
 image = "0.23.14"
 bevy_prototype_lyon = "0.3.0"
-bevy_common = {path = "bevy_common"}
+bevy_common = {git = "https://github.com/TheLeonsver1/bevy_common.git", rev="512d7bb"}
 [profile.dev.package."*"]
 opt-level = 3
