--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,8 @@ edition = "2018"
 
 [dependencies]
 bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "render", "png"] }
-bevy_tilemap = "0.4"
-enum_index = "0.2.0"
-enum_index_derive = "0.2.0"
 bevy_egui = "0.4"
-image = "0.23.14"
+serde = "1.0.125"
 bevy_prototype_lyon = "0.3.0"
 bevy_common = {path = "bevy_common"}
 [profile.dev.package."*"]
